--- a/.htaccess
+++ b/.htaccess
@@ -1,8 +1,9 @@
 <IfModule mod_rewrite.c>
-RewriteEngine on
-RewriteBase /
-RewriteRule ^index\.php$ - [L]
-RewriteCond %{HTTP_HOST} ^loan\.experienciairp\.com$
-RewriteRule ^cptest$ "http\:\/\/cpanel\.net\/" [R=301,L]
+  RewriteEngine On
+  RewriteBase /
+  RewriteRule ^index\.html$ - [L]
+  RewriteCond %{REQUEST_FILENAME} !-f
+  RewriteCond %{REQUEST_FILENAME} !-d
+  RewriteRule . /index.html [L]
 </IfModule>
 
